# rensen

./: Cargo.toml  README.md  build.sh  dep.sh  install.sh  record.json  setup.sh
2024-05-02-06-42-09Z.tar/: .inner.json
assets/: hosts.yml  rensen_config.yml
ctl/: Cargo.toml  todo
ctl/src/: .action.rs.rustfmt  2  action.rs  main.rs  utils.rs
daemon/: Cargo.toml
daemon/service/: rensen.service  rensend.service
daemon/src/: .main.rs.rustfmt  \  daemon.rs  main.rs  scheduler.rs  tasks.rs  utils.rs
docs/: setup.md
lib/: Cargo.toml  todo
lib/src/: backup.rs  compiler.rs  config.rs  lib.rs  logging.rs  main.rs  record.rs  snapshot.rs  tests.rs  traits.rs  utils.rs
lib/tests/: record.json  test.yaml
rensen-lib/: Cargo.toml
rensen-lib/src/: backup.rs  compiler.rs  config.rs  hosts_2.yml  logging.rs  main.rs  record.rs  snapshot.rs  tests.rs  traits.rs  utils.rs
rensen-lib/tests/: test.yaml
service/: multisync.service  senren.service
src/: .utils.rs.rustfmt  :w  \  backup.rs  compiler.rs  config.json  config.rs  hosts  hosts.conf  hosts.yml  hosts_2.yml  logging.rs  main.rs  record.json  record.rs  snapshot.rs  test.yaml  tests.rs  traits.rs  utils.rs
src/conf/: serde.rs
tests/: hosts_2.yml  record.json  test.json  test.yaml
